all question should be answered validation and suggestion box shifting issue fixed

--- a/src/pages/feedback/feedback.scss
+++ b/src/pages/feedback/feedback.scss
@@ -38,6 +38,8 @@ page-feedback {
         }
       }
 
+      .scroll-content { padding-bottom: 0!important; }
+
       .hide,
 [hidden],
 template {
